--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,7 @@ endorsed.classpath=
 excludes=
 file.reference.derby.jar=lib/derby.jar
 file.reference.derbyclient.jar=lib/derbyclient.jar
+file.reference.swingx-all-1.6.4.jar=lib/swingx-all-1.6.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.derbyclient.jar}:\
     ${file.reference.derby.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.swingx-all-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
